--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,9 @@
     <div class="stars" style="display: none;"></div>
     <button class="mode-toggle"></button>
 
-    <h1>Kunj Pathak</h1>
-
+     <h1>Kunj Pathak</h1>
+	<div class="moving-background"></div>
+	
     <!-- Navigation Buttons -->
     <div class="navigation">
         <a href="/projects">Projects</a>
@@ -20,52 +21,25 @@
         <a href="/about">About Me</a>
     </div>
 
+	<div class="random-image-container">
+	    <img src="/static/images/AI.svg" class="random-image" alt="Image 1">
+	    <img src="/static/images/c++.svg" class="random-image no-invert" alt="Image 2">
+	    <img src="/static/images/c.svg" class="random-image no-invert" alt="Image 3">
+	    <img src="/static/images/go.svg" class="random-image no-invert" alt="Image 4">
+	    <img src="/static/images/python.svg" class="random-image no-invert" alt="Image 5">
+	    <img src="/static/images/riscv.svg" class="random-image no-invert" alt="Image 6">
+	    <img src="/static/images/ifelse.svg" class="random-image" alt="Image 7">
+	    <img src="/static/images/cloud.svg" class="random-image" alt="Image 8">
+	    <img src="/static/images/sqlite.svg" class="random-image no-invert" alt="Image 9">
+	    <img src="/static/images/gear.svg" class="random-image" alt="Image 10">
+	    <img src="/static/images/api.svg" class="random-image" alt="Image 11">
+	    <img src="/static/images/binary.svg" class="random-image" alt="Image 12">
+	    <img src="/static/images/datastructure.svg" class="random-image no-invert" alt="Image 13">
+
+	    
+	</div>
+	
+
     <script src="/static/script.js"></script>
 </body>
 </html>
-
-
-
-<!-- <!DOCTYPE html> -->
-<!-- <html lang="en"> -->
-<!-- <head> -->
-<!--     <meta charset="UTF-8"> -->
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-<!--     <title>Kunj Pathak</title> -->
-<!--     <link rel="stylesheet" href="/static/style.css"> -->
-<!--     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"> -->
-<!--      -->
-<!-- </head> -->
-<!-- <body> -->
-<!--     <div class="stars" style="display: none;"></div> -->
-<!--     <button class="mode-toggle"></button> -->
-<!--     <h1>Kunj Pathak</h1> -->
-<!--  -->
-<!-- 	<div class="navigation"> -->
-<!-- 	    <a href="javascript:void(0);" id="projects-btn">Projects</a> -->
-<!-- 	    <a href="javascript:void(0);" id="contacts-btn">Contacts</a> -->
-<!-- 	    <a href="javascript:void(0);" id="about-btn">About Me</a> -->
-<!-- 	</div> -->
-<!--  -->
-<!-- 	 -->
-<!--     <!-- Dynamic Content Area --> -->
-<!--     <div id="content-area"> -->
-<!--         <p>Welcome to my portfolio! Click on any button above to navigate.</p> -->
-<!--     </div> -->
-<!--  -->
-<!-- 	 -->
-<!-- 	<div class="contact-info"> -->
-<!-- 	    <a href="mailto:kunjpathak74@gmail.com" class="icon-link"> -->
-<!-- 	        <i class="fa fa-envelope" aria-hidden="true"></i> -->
-<!-- 	    </a> -->
-<!-- 	<a href="https://www.linkedin.com/in/kunjpathak/" target="_blank" class="icon-link"> -->
-<!-- 	    <i class="fab fa-linkedin"></i> -->
-<!-- 	</a> -->
-<!-- 	<a href="tel:+14088632623" class="icon-link"> -->
-<!--     <i class="fas fa-phone"></i> -->
-<!--     </a> -->
-<!-- 	</div> -->
-<!--  -->
-<!--     <script src="/static/script.js"></script> -->
-<!-- </body> -->
-<!-- </html> -->
